# cpp_project_template

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists_bench.txt.in
src/: main.cc
test/: CMakeLists.txt  minimal_bench.cpp  minimal_test.cpp
